--- a/about-us.html
+++ b/about-us.html
@@ -270,8 +270,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="vertical-divider d-none d-md-block"></div>
-                    <div class="col-md-12 col-lg-2 mt-5 mt-lg-0 text-center d-flex">
+                    <div class="vertical-divider d-none d-md-block p-0"></div>
+                    <div class="col-md-12 col-lg-2 mt-5 mt-lg-0 justify-content-center d-flex">
                         <img class="img-fluid" src="./new-imgs/about.svg" alt="about" />
                     </div>
                 </div>
