changiung the corrupted pic

--- a/home.html
+++ b/home.html
@@ -559,7 +559,7 @@
                     <div class="links d-block d-lg-flex text-center">
                         <div class="sliding-line d-none d-md-block"></div>
                         <ul class="d-flex justify-content-center  p-0">
-                            <li data-slide-to="0">
+                            <li data-slide-to="0" class="active">
                                 <div class="mb-2">
                                     <svg id="working" xmlns="http://www.w3.org/2000/svg" width="54.204" height="53.121"
                                         viewBox="0 0 54.204 53.121">
@@ -614,7 +614,7 @@
                                 </div>
                                 كن مستعدا لسوق العمل
                             </li>
-                            <li data-slide-to="3" class="active">
+                            <li data-slide-to="3">
                                 <div class="mb-2">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="53.098" height="53.121"
                                         viewBox="0 0 53.098 53.121">
@@ -634,7 +634,7 @@
                         </ul>
                     </div>
                     <div class="fade-carousel mt-5">
-                        <div class="fade-item ">
+                        <div class="fade-item active">
                             <div class="row">
                                 <div class="col-12 col-md-4 d-flex justify-content-center">
                                     <img class="img-fluid" src="./new-imgs/X1.svg" alt="y1">
@@ -646,7 +646,7 @@
                                     </p>
                                 </div>
                                 <div class="col-12 col-md-4 d-flex justify-content-center">
-                                    <img class="img-fluid" src="./new-imgs/X2.svg" alt="y2">
+                                    <img class="img-fluid" src="./new-imgs/X2.png" alt="y2">
                                 </div>
                             </div>
                         </div>
@@ -686,7 +686,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="fade-item instructors active">
+                        <div class="fade-item instructors ">
                             <div class="row">
                                 <div class="col-6 col-md-3 d-flex justify-content-center">
                                     <div class="instructor position-relative">
