--- a/home.html
+++ b/home.html
@@ -122,9 +122,13 @@
             .home-intro .links a {
                 font-size: 14px;
                 width: 210px;
+                height: 50px;
                 border-radius: 6px;
                 transition: background-color 0.5s ease;
                 margin-left: 25px;
+                display: inline-flex;
+                justify-content: center;
+                align-items: center;
             }
 
             .home-intro .links a:first-of-type {
@@ -237,6 +241,10 @@
                 position: relative;
             }
 
+            .dev-skills .carousel .fade-carousel .fade-item:not(.instructors) p {
+                font-size: 20px;
+                font-weight: bold;
+            }
 
             .dev-skills .carousel .fade-carousel .fade-item:not(.instructors) img {
                 width: 50%;
@@ -258,6 +266,7 @@
                 padding: 12px;
                 font-size: 13px;
                 border-radius: 6px;
+                box-shadow: 0px 7px 17px -12px rgb(0 0 0 / 8%);
             }
 
             .dev-skills .carousel .fade-item .instructor .desc p {
@@ -271,6 +280,16 @@
 
             .dev-skills .carousel .fade-item .instructor .desc img {
                 width: 19px;
+            }
+
+            @media (max-width: 576px) {
+
+                .dev-skills .carousel .fade-item .instructor .desc p,
+                .dev-skills .carousel .fade-item .instructor .desc h5 {
+                    margin-bottom: 0px;
+                }
+
+
             }
 
             @media (min-width: 768px) {
@@ -333,6 +352,7 @@
                 .features .one-feature:last-of-type {
                     margin-right: 422px;
                     margin-top: -222px;
+                    float: left;
                 }
 
                 .features .one-feature {
@@ -362,7 +382,7 @@
                 }
 
                 .features .one-feature img {
-                    width: 600px;
+                    width: 575px;
                 }
 
                 .features .down-arrow {
@@ -380,12 +400,12 @@
 
             @media (min-width:1400px) {
                 .features .one-feature img {
-                    width: auto;
+                    width: 522px;
                 }
 
                 .features .down-arrow {
-                    top: 353px;
-                    left: -114px;
+                    top: 243px;
+                    left: -33px;
                     width: 600px;
                 }
 
@@ -397,17 +417,24 @@
             }
 
             /* start departments */
+            .departments {
+                clear: both;
+            }
+
             .departments .item {
                 border: 1px solid #dddfe4;
-                padding: 30px;
                 border-radius: 6px;
                 cursor: pointer;
-                transition: all 1s ease;
                 height: 100%;
             }
 
-            .departments .item:hover {
+            .departments .kids .item {
                 background: #D6F1F9;
+            }
+
+            .departments .item .wrapper {
+                padding: 30px;
+
             }
 
             .departments .item a.orange {
@@ -418,9 +445,20 @@
             .departments .item a {
                 background: #42B39A;
                 width: 100px;
+                height: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             /* start testemonials */
+            .testemonials .circle {
+                position: absolute;
+                bottom: -87%;
+                z-index: -1;
+                right: -405px;
+            }
+
             .testemonials .trainees .height {
                 display: flex;
                 flex-flow: column;
@@ -473,6 +511,18 @@
                 margin-right: 20px;
                 min-width: 80px;
             }
+
+            @media (max-width: 576px) {
+                .testemonials .circle {
+                    bottom: -30%;
+                }
+            }
+
+            /* start help */
+            .help {
+                margin-top: 150px;
+                margin-bottom: 171px;
+            }
         </style>
     </head>
 
@@ -486,10 +536,18 @@
                     <h2 class="h1">كورسنتلي</h2>
                     <p>عزز مهاراتك وقدراتك من خلال العديد من البرامج والدبلومات حتى تحقق أهدافك</p>
                     <div class="links">
-                        <a href="#" class="btn"><span>اعرف المزيد</span> <img src="./new-imgs/fi-rr-arrow-left.svg"
-                                alt="arrow-left"></a>
-                        <a href="#" class="btn"><span>فديو تعريفي</span> <img src="./new-imgs/fi-rr-play-alt.svg"
-                                alt="play"></a>
+                        <a href="#" class="btn">
+                            <div>
+                                <span>اعرف المزيد</span>
+                                <img src="./new-imgs/fi-rr-arrow-left.svg" alt="arrow-left">
+                            </div>
+                        </a>
+                        <a href="#" class="btn">
+                            <div>
+                                <span>فديو تعريفي</span>
+                                <img src="./new-imgs/fi-rr-play-alt.svg" alt="play">
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="img text-center">
@@ -794,7 +852,7 @@
         <section class="departments">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-6 mb-4">
+                    <div class="kids col-12 col-lg-6 mb-4">
                         <div class="item d-flex justify-content-between align-items-center">
                             <div class="wrapper">
                                 <h4 class="font-weight-bold">للاطفال</h4>
@@ -802,8 +860,8 @@
                                     والمتعة، ويكتسب مهارات جديدة مساعده لبناء مستقبله</p>
                                 <a href="#" class="btn"><img src="./new-imgs/fi-rr-arrow-left.svg" alt="arrow"></a>
                             </div>
-                            <div class="img">
-                                <img src="./new-imgs/BoyModel.svg" alt="boy" class="img-fluid">
+                            <div class="img h-100 mr-3">
+                                <img src="./new-imgs/BoyModel.svg" alt="boy">
                             </div>
                         </div>
                     </div>
@@ -816,8 +874,8 @@
                                     في أسواق العمل المحلية والعالمية</p>
                                 <a href="#" class="btn orange"><img src="./new-imgs/fi-rr-arrow-left.svg" alt=""></a>
                             </div>
-                            <div class="img">
-                                <img src="./new-imgs/ManModel.svg" alt="boy" class="img-fluid">
+                            <div class="img h-100  mr-3">
+                                <img src="./new-imgs/ManModel.svg" alt="boy">
                             </div>
                         </div>
                     </div>
@@ -825,7 +883,7 @@
             </div>
         </section>
         <section class="testemonials">
-            <div class="container">
+            <div class="container position-relative">
                 <div class="text-center mb-5">
                     <h2 class="h1">اراء المتدربين</h2>
                     <div class="divider"></div>
@@ -950,21 +1008,25 @@
                         </div>
                     </div>
                 </div>
+                <img src="./new-imgs/circle.svg" alt="circle" class="circle">
             </div>
         </section>
-        <section class="help mb-5">
+        <section class="help ">
             <div class="container">
                 <div class="row justify-content-center text-center text-md-left">
                     <div class="col-12 col-md-6 d-block d-md-flex align-items-center order-1 order-md-0">
                         <div class="wrapper">
-                            <h2>للمساعده</h2>
+                            <h2 class="font-weight-bold">للمساعده</h2>
                             <p>نحن نعمل علي مساعدتك دائماً في أي وقت والإجابة علي إستفساراتكم</p>
                             <a href="#" class="btn help-btn"><img src="./new-imgs/fi-rr-arrow-left.svg" alt="arrow"></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 mb-4 mb-md-0">
+                    <div class="col-1">
+                        <div class="vertical-divider h-100"></div>
+                    </div>
+                    <div class="col-12 col-md-2 mb-4 mb-md-0">
                         <div class="wrapper">
-                            <img src="./new-imgs/help-logo.svg" alt="logo">
+                            <img class="img-fluid" src="./new-imgs/help-logo.svg" alt="logo">
                         </div>
                     </div>
                 </div>
