--- a/careers.html
+++ b/careers.html
@@ -293,6 +293,39 @@
                     right: 111px;
                 }
             }
+
+            /* start careers dvantages */
+            @media (max-width: 767px) {
+                .careers-advantages p {
+                    font-size: 14px;
+                }
+            }
+
+            /* start last */
+            .last {
+                background: url(./new-imgs/careers-bg.svg) no-repeat;
+                margin-bottom: 100px;
+            }
+
+            .last .container {
+                height: 673px;
+            }
+
+            .last .text {
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+
+            .last a {
+                display: inline-block;
+                border-radius: 6px;
+                background: #42B39A;
+                padding: 10px 94px;
+                display: inline-block;
+                color: white;
+                margin-top: 20px;
+            }
         </style>
     </head>
 
@@ -397,7 +430,78 @@
                 </div>
             </div>
         </section>
-
+        <section class="careers-advantages pt-5">
+            <div class="container">
+                <div class="text-center mb-0 mb-sm-4">
+                    <h2 class="h1">مميزات كورسنتلي اعمال</h2>
+                    <div class="divider"></div>
+                </div>
+                <div class="row justify-content-center mt-5">
+                    <div class="col-10 col-lg-6">
+                        <div class="d-sm-flex justify-content-start align-items-center mb-5">
+                            <div class="img mr-sm-4 text-center text-md-left">
+                                <img class="img-fluid" src="./new-imgs/online-learning.svg" alt="online-learning">
+                            </div>
+                            <div class="text">
+                                <h4 class="my-3 text-center text-sm-left">التدريب</h4>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">صناعة مسار تدريبي
+                                    مصمم
+                                    لمؤسستك</p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">شهادة إتمام البرنامج
+                                    التدريبي</p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">شهادة إتمام البرنامج
+                                    التدريبي</p>
+                            </div>
+                        </div>
+                        <div class="d-sm-flex justify-content-start align-items-center mb-5">
+                            <div class="img mr-sm-4 text-center text-md-left">
+                                <img class="img-fluid" src="./new-imgs/kindness.svg" alt="kindness">
+                            </div>
+                            <div class="text">
+                                <h4 class="my-3 text-center text-sm-left">خدمة المتدرب</h4>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الدعم الفني</p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الاجابة على أسئلة
+                                    المتدرب من قبل متخصصين ذو خبرة</p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الوصول الى جميع
+                                    المحاضرات التدريبية السابقة</p>
+                            </div>
+                        </div>
+                        <div class="d-sm-flex justify-content-start align-items-center mb-5">
+                            <div class="img mr-sm-4 text-center text-sm-left">
+                                <img class="img-fluid" src="./new-imgs/social-care.svg" alt="social-care">
+                            </div>
+                            <div class="text">
+                                <h4 class="my-3 text-center text-md-left">خدمات للمؤسسات</h4>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تقديم البرنامج
+                                    التدريبي
+                                    وفق التوقيت المناسب للمؤسسة</p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تطوير المناهج
+                                    ومراجعتها
+                                </p>
+                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تقرير خاص لكل متدرب
+                                    خلال
+                                    فترة التدريب</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="img h-100 d-flex align-items-center">
+                            <img src="./new-imgs/advantages-row.svg" alt="advantages" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="last">
+            <div class="container">
+                <div class="text h-100 justify-content-lg-start justify-content-center">
+                    <div class="wrapper">
+                        <h4 class="font-weight-bold">الوصول للمستوي العالمي أصبح بمتناول يديك</h4>
+                        <a href="#">تواصل معنا الآن</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 
 </html>
