--- a/home.html
+++ b/home.html
@@ -156,6 +156,7 @@
             @media (max-width: 575px) {
                 .home-intro .links a {
                     margin-bottom: 20px;
+                    margin-left: 0;
                 }
             }
 
@@ -512,7 +513,7 @@
                 min-width: 80px;
             }
 
-            @media (max-width: 576px) {
+            @media (max-width: 991px) {
                 .testemonials .circle {
                     bottom: -30%;
                 }
@@ -853,12 +854,14 @@
             <div class="container">
                 <div class="row">
                     <div class="kids col-12 col-lg-6 mb-4">
-                        <div class="item d-flex justify-content-between align-items-center">
+                        <div
+                            class="item text-center text-md-left  d-md-flex justify-content-between align-items-center">
                             <div class="wrapper">
                                 <h4 class="font-weight-bold">للاطفال</h4>
                                 <p>ابني لطفلك مستقبلا زاهراً من خلال تدريب سهل يمنح لطفلك الفائدة
                                     والمتعة، ويكتسب مهارات جديدة مساعده لبناء مستقبله</p>
-                                <a href="#" class="btn"><img src="./new-imgs/fi-rr-arrow-left.svg" alt="arrow"></a>
+                                <a href="#" class="btn mx-auto mx-md-0"><img src="./new-imgs/fi-rr-arrow-left.svg"
+                                        alt="arrow"></a>
                             </div>
                             <div class="img h-100 mr-3">
                                 <img src="./new-imgs/BoyModel.svg" alt="boy">
@@ -866,13 +869,14 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6  mb-4">
-                        <div class="item d-flex justify-content-between align-items-center">
+                        <div class="item text-center text-md-left d-md-flex justify-content-between align-items-center">
                             <div class="wrapper">
                                 <h4 class="font-weight-bold">قطاع الأعمال</h4>
                                 <p>انقل فريقك لمستوى آخر من الابداع من خلال برامج تدريبية متخصصة يحتاج إليها فريقك
                                     للتميز
                                     في أسواق العمل المحلية والعالمية</p>
-                                <a href="#" class="btn orange"><img src="./new-imgs/fi-rr-arrow-left.svg" alt=""></a>
+                                <a href="#" class="btn orange  mx-auto mx-md-0"><img
+                                        src="./new-imgs/fi-rr-arrow-left.svg" alt=""></a>
                             </div>
                             <div class="img h-100  mr-3">
                                 <img src="./new-imgs/ManModel.svg" alt="boy">
@@ -1018,7 +1022,8 @@
                         <div class="wrapper">
                             <h2 class="font-weight-bold">للمساعده</h2>
                             <p>نحن نعمل علي مساعدتك دائماً في أي وقت والإجابة علي إستفساراتكم</p>
-                            <a href="#" class="btn help-btn"><img src="./new-imgs/fi-rr-arrow-left.svg" alt="arrow"></a>
+                            <a href="#" class="btn help-btn mx-auto mx-md-0"><img src="./new-imgs/fi-rr-arrow-left.svg"
+                                    alt="arrow"></a>
                         </div>
                     </div>
                     <div class="col-1">
