--- a/careers.html
+++ b/careers.html
@@ -295,16 +295,19 @@
             }
 
             /* start careers dvantages */
-            @media (max-width: 767px) {
+            @media (max-width: 768px) {
                 .careers-advantages p {
                     font-size: 14px;
+                }
+
+                .careers .row .adds {
+                    opacity: 0.5;
                 }
             }
 
             /* start last */
             .last {
                 background: url(./new-imgs/careers-bg.svg) no-repeat;
-                margin-bottom: 100px;
             }
 
             .last .container {
@@ -326,6 +329,22 @@
                 color: white;
                 margin-top: 20px;
             }
+
+            @media (max-width: 768px) {
+                .last {
+                    background-position-x: 42%;
+                }
+            }
+
+            @media (max-width: 575px) {
+                .last {
+                    background-position-x: 33%;
+                }
+
+                .last .text .wrapper {
+                    margin-bottom: 30px;
+                }
+            }
         </style>
     </head>
 
@@ -333,7 +352,7 @@
         <section class="careers">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 order-1 order-lg-0">
                         <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left">
                             <div class="text">
                                 <h2>لماذا كورسنتلي؟</h2>
@@ -353,7 +372,7 @@
                     <img class="careers-arrow-right arrow" src="./new-imgs/careers-arrow-right.svg" alt="arrow">
                 </div>
                 <div class="row ">
-                    <div class="col-12 col-lg-6 order-1 order-lg-0">
+                    <div class="col-12 col-lg-6">
                         <div class="img">
                             <img src="./new-imgs/row2.svg" alt="row1" class="img-fluid">
                         </div>
@@ -373,7 +392,7 @@
                     <img src="./new-imgs/search.svg" alt="search" class="adds search">
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 order-1 order-lg-0">
                         <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left">
                             <div class="text">
                                 <h2>تحسين المهارات</h2>
@@ -392,12 +411,12 @@
                     <img src="./new-imgs/program.svg" alt="program" class="adds program">
                 </div>
                 <div class="row ">
-                    <div class="col-12 col-lg-6 order-1 order-lg-0">
+                    <div class="col-12 col-lg-6">
                         <div class="img">
                             <img src="./new-imgs/row4.svg" alt="row1" class="img-fluid">
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6 order-0">
+                    <div class="col-12 col-lg-6">
                         <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left">
                             <div class="text">
                                 <h2>التوجيه والارشاد</h2>
@@ -411,7 +430,7 @@
                     <img src="./new-imgs/lamp.svg" alt="lamp" class="adds lamp-2">
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 order-1 order-lg-0">
                         <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left">
                             <div class="text">
                                 <h2>برامج تدريبية تركز على النتائج</h2>
