--- a/home.html
+++ b/home.html
@@ -447,6 +447,9 @@
                 height: 100%;
                 transition: border-color 1s ease;
             }
+            
+            .departments .item:last-of-type {
+                background-color: #f0f2f3;
 
             .departments .item:hover {
                 border-color: #2b77b2;
