--- a/home.html
+++ b/home.html
@@ -448,7 +448,7 @@
                 transition: border-color 1s ease;
             }
             
-            .departments .item:not(.kids) {
+            .departments .row > div:not(.kids) {
                 background-color: #f0f2f3;
 
             .departments .item:hover {
