--- a/home.html
+++ b/home.html
@@ -457,6 +457,9 @@
             .departments .kids .item {
                 background: #D6F1F9;
             }
+            
+            .departments .buisness .item {
+                background-color: #f0f2f3;
 
             .departments .item .wrapper {
                 padding: 30px;
@@ -907,7 +910,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6  mb-4">
+                    <div class="buisness col-12 col-lg-6  mb-4">
                         <div class="item text-center text-md-left d-md-flex justify-content-between align-items-center">
                             <div class="wrapper">
                                 <h4 class="font-weight-bold">قطاع الأعمال</h4>
