--- a/home.html
+++ b/home.html
@@ -459,7 +459,7 @@
             }
             
             .departments .buisness .item {
-                background-color: #f0f2f3;
+                background: #f0f2f3;
             }
 
             .departments .item .wrapper {
