--- a/home.html
+++ b/home.html
@@ -119,6 +119,11 @@
             }
 
             /* start home intro */
+            .home-intro .img {
+                width: 80%;
+                margin: auto;
+            }
+
             .home-intro .links a {
                 font-size: 14px;
                 width: 210px;
@@ -154,6 +159,10 @@
             }
 
             @media (max-width: 575px) {
+                .home-intro .img {
+                    width: 100%;
+                }
+
                 .home-intro .links a {
                     margin-bottom: 20px;
                     margin-left: 0;
